kubernetes/deployment.prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curriculum
  namespace: production
  labels:
    app: curriculum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curriculum
  template:
    metadata:
      labels:
        app: curriculum
    spec:
      containers:
        - image: docker.pkg.github.com/humanoidsbv/curriculum/curriculum:$VERSION
          name: curriculum
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: registry
