kubernetes/service.prod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: curriculum
  name: curriculum
  namespace: production
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: curriculum
